kubernetes/apps/github-actions/1password/syndicates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onepassword-syndicates
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${EXTERNAL_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: network-github-actions-whitelist@kubernetescrd
spec:
  ingressClassName: external
  rules:
    - host: "tulip.${ROOT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onepassword-syndicates
                port:
                  number: 8080
